refactor(stats): 불필요한 메서드 제거 및 판매 랭킹 집계 로직 개선